# zephyr-kconfig-issue-manifest-repo

./: west.yml
applications/my_firmware/: CMakeLists.txt  Kconfig  my_driver.overlay  prj.conf
applications/my_firmware/drivers/: Kconfig
applications/my_firmware/drivers/my_driver/: CMakeLists.txt  Kconfig  my_driver.c
applications/my_firmware/src/: main.c
